Add all WPR, Deal Documents, and Insights documents to portal
Updated links for WPR and Deal Documents sections, added new document entries, and improved accordion functionality.

--- a/index.html
+++ b/index.html
@@ -82,13 +82,66 @@
                 <button class="accordion-btn">WPR's</button>
                 <div class="accordion-content">
                     <div class="wpr-grid">
-                        <!-- Update these links with your actual GitHub repo path -->
                         <div class="wpr-tile">
                             <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
                             <div class="wpr-title">2025-06-04 WPR</div>
-                            <a href="https://github.com/your-github-username/your-repo/raw/main/docs/WPR's/2025-06-04_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
+                            <a href="https://github.com/ejculp-droid/Cardinal-Transportation-Client-Portal/raw/main/docs/docs/WPR's/2025-06-04_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
                         </div>
-                        <!-- ...repeat for other WPR docs as needed... -->
+                        <div class="wpr-tile">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
+                            <div class="wpr-title">2025-06-13 WPR</div>
+                            <a href="https://github.com/ejculp-droid/Cardinal-Transportation-Client-Portal/raw/main/docs/docs/WPR's/2025-06-13_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
+                        </div>
+                        <div class="wpr-tile">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
+                            <div class="wpr-title">2025-06-20 WPR</div>
+                            <a href="https://github.com/ejculp-droid/Cardinal-Transportation-Client-Portal/raw/main/docs/docs/WPR's/2025-06-20_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
+                        </div>
+                        <div class="wpr-tile">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
+                            <div class="wpr-title">2025-06-27 WPR</div>
+                            <a href="https://github.com/ejculp-droid/Cardinal-Transportation-Client-Portal/raw/main/docs/docs/WPR's/2025-06-27_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
+                        </div>
+                        <div class="wpr-tile">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
+                            <div class="wpr-title">2025-07-11 WPR</div>
+                            <a href="https://github.com/ejculp-droid/Cardinal-Transportation-Client-Portal/raw/main/docs/docs/WPR's/2025-07-11_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
+                        </div>
+                        <div class="wpr-tile">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
+                            <div class="wpr-title">2025-08-01 WPR</div>
+                            <a href="https://github.com/ejculp-droid/Cardinal-Transportation-Client-Portal/raw/main/docs/docs/WPR's/2025-08-01_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
+                        </div>
+                        <div class="wpr-tile">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
+                            <div class="wpr-title">2025-08-22 WPR</div>
+                            <a href="https://github.com/ejculp-droid/Cardinal-Transportation-Client-Portal/raw/main/docs/docs/WPR's/2025-08-22_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
+                        </div>
+                        <div class="wpr-tile">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
+                            <div class="wpr-title">2025-09-19 WPR</div>
+                            <a href="https://github.com/ejculp-droid/Cardinal-Transportation-Client-Portal/raw/main/docs/docs/WPR's/2025-09-19_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
+                        </div>
+                        <div class="wpr-tile">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
+                            <div class="wpr-title">2025-10-03 WPR</div>
+                            <a href="https://github.com/ejculp-droid/Cardinal-Transportation-Client-Portal/raw/main/docs/docs/WPR's/2025-10-03_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
+                        </div>
+                        <div class="wpr-tile">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
+                            <div class="wpr-title">2025-10-17 WPR</div>
+                            <a href="https://github.com/ejculp-droid/Cardinal-Transportation-Client-Portal/raw/main/docs/docs/WPR's/2025-10-17_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
+                        </div>
+                        <div class="wpr-tile">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
+                            <div class="wpr-title">2025-10-24 WPR</div>
+                            <a href="https://github.com/ejculp-droid/Cardinal-Transportation-Client-Portal/raw/main/docs/docs/WPR's/2025-10-24_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
+                        </div>
+                        <div class="wpr-tile">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
+                            <div class="wpr-title">2025-11-21 WPR</div>
+                            <a href="https://github.com/ejculp-droid/Cardinal-Transportation-Client-Portal/raw/main/docs/docs/WPR's/2025-11-21_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -98,88 +151,106 @@
                     <div class="wpr-grid">
                         <!-- Buckeye documents will be added here when requested -->
                     </div>
-                    <div class="accordion" style="margin-top:18px;">
-                        <button class="accordion-btn" style="background:#8b1a1a;">Deal Documents</button>
-                        <div class="accordion-content">
-                            <div class="wpr-grid">
-                                <!-- Update these links with your actual GitHub repo path -->
-                                <div class="wpr-tile">
-                                    <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
-                                    <div class="wpr-title">Real Rstate Purchase Contract Cardinal Buckeye.pdf</div>
-                                    <a href="https://github.com/your-github-username/your-repo/raw/main/docs/Buckeye/Deal Documents/Real Rstate Purchase Contract Cardinal Buckeye.pdf" class="wpr-link" target="_blank">View/Download</a>
-                                </div>
-                                <!-- ...repeat for other Deal Documents as needed... -->
+                <div class="accordion" style="margin-top:18px;">
+                    <button class="accordion-btn" style="background:#8b1a1a;">Deal Documents</button>
+                    <div class="accordion-content">
+                        <div class="wpr-grid">
+                            <div class="wpr-tile">
+                                <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
+                                <div class="wpr-title">$5million Non-Binding Term Sheet</div>
+                                <a href="https://github.com/ejculp-droid/Cardinal-Transportation-Client-Portal/raw/main/docs/docs/Buckeye/Deal%20Documents/$5million_Non-Binding%20Term%20S....pdf" class="wpr-link" target="_blank">View/Download</a>
                             </div>
-                        </div>
-                    </div>
-                    <div class="accordion" style="margin-top:18px;">
-                        <button class="accordion-btn" style="background:#8b1a1a;">Insights</button>
-                        <div class="accordion-content">
-                            <div class="wpr-grid">
-                                <!-- Update these links with your actual GitHub repo path -->
-                                <div class="wpr-tile">
-                                    <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
-                                    <div class="wpr-title">Narrative from Meeting with Buckeye Charter Owners.pdf</div>
-                                    <a href="https://github.com/your-github-username/your-repo/raw/main/docs/Buckeye/Insights/Narrative from Meeting with Buckeye Charter Owners.pdf" class="wpr-link" target="_blank">View/Download</a>
-                                </div>
-                                <!-- ...repeat for other Insights docs as needed... -->
+                            <div class="wpr-tile">
+                                <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
+                                <div class="wpr-title">Appraisal</div>
+                                <a href="https://github.com/ejculp-droid/Cardinal-Transportation-Client-Portal/raw/main/docs/docs/Buckeye/Deal%20Documents/Appraisal.pdf" class="wpr-link" target="_blank">View/Download</a>
                             </div>
-                        </div>
-                    </div>
-                    <div class="accordion" style="margin-top:18px;">
-                        <button class="accordion-btn" style="background:#8b1a1a;">Photos</button>
-                        <div class="accordion-content">
-                            <div class="wpr-grid">
-                                <div class="wpr-tile">
-                                    <img src="https://upload.wikimedia.org/wikipedia/commons/3/3b/Folder_icon.svg" alt="Photos Folder" class="wpr-icon" />
-                                    <div class="wpr-title">Buckeye Photos Folder</div>
-                                    <a href="https://onedrive.live.com/your-shared-folder-link" class="wpr-link" target="_blank">View All Photos</a>
-                                </div>
+                            <div class="wpr-tile">
+                                <img src="https://upload.wikimedia.org/wikipedia/commons/3/34/Microsoft_Office_Excel_%282019%E2%80%93present%29.svg" alt="Excel" class="wpr-icon" />
+                                <div class="wpr-title">BUCKEYE$5.2mm</div>
+                                <a href="https://github.com/ejculp-droid/Cardinal-Transportation-Client-Portal/raw/main/docs/docs/Buckeye/Deal%20Documents/BUCKEYE$5.2mm.xlsx" class="wpr-link" target="_blank">View/Download</a>
+                            </div>
+                            <div class="wpr-tile">
+                                <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
+                                <div class="wpr-title">Purchase Agreement Cardinal</div>
+                                <a href="https://github.com/ejculp-droid/Cardinal-Transportation-Client-Portal/raw/main/docs/docs/Buckeye/Deal%20Documents/Purchase%20Agreement%20Cardinal....pdf" class="wpr-link" target="_blank">View/Download</a>
+                            </div>
+                            <div class="wpr-tile">
+                                <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
+                                <div class="wpr-title">Real Estate Purchase Contract</div>
+                                <a href="https://github.com/ejculp-droid/Cardinal-Transportation-Client-Portal/raw/main/docs/docs/Buckeye/Deal%20Documents/Real%20Rstate%20Purchase%20Contract....pdf" class="wpr-link" target="_blank">View/Download</a>
                             </div>
                         </div>
                     </div>
                 </div>
+                <div class="accordion" style="margin-top:18px;">
+                    <button class="accordion-btn" style="background:#8b1a1a;">Insights</button>
+                    <div class="accordion-content">
+                        <div class="wpr-grid">
+                            <div class="wpr-tile">
+                                <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
+                                <div class="wpr-title">Key Information from Meeting</div>
+                                <a href="https://github.com/ejculp-droid/Cardinal-Transportation-Client-Portal/raw/main/docs/docs/Buckeye/Insights/Key%20Information%20from%20Meeting....pdf" class="wpr-link" target="_blank">View/Download</a>
+                            </div>
+                            <div class="wpr-tile">
+                                <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
+                                <div class="wpr-title">Narrative from Meeting with Buckeye</div>
+                                <a href="https://github.com/ejculp-droid/Cardinal-Transportation-Client-Portal/raw/main/docs/docs/Buckeye/Insights/Narrative%20from%20Meeting%20with%20B....pdf" class="wpr-link" target="_blank">View/Download</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion" style="margin-top:18px;">
+                    <button class="accordion-btn" style="background:#8b1a1a;">Photos</button>
+                    <div class="accordion-content">
+                        <div class="wpr-grid">
+                            <div class="wpr-tile">
+                                <img src="https://upload.wikimedia.org/wikipedia/commons/3/3b/Folder_icon.svg" alt="Photos Folder" class="wpr-icon" />
+                                <div class="wpr-title">Buckeye Photos Folder</div>
+                                <a href="https://onedrive.live.com/your-shared-folder-link" class="wpr-link" target="_blank">View All Photos</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                </div>
             </div>
         </div>
     </div>
-    <!-- Modal for image pop-up (optional, not used for Photos tab anymore) -->
     <div id="image-modal" style="display:none;position:fixed;z-index:9999;left:0;top:0;width:100vw;height:100vh;background:rgba(0,0,0,0.7);align-items:center;justify-content:center;">
-        <span id="modal-close" style="position:absolute;top:32px;right:48px;font-size:2.5rem;color:#fff;cursor:pointer;font-weight:bold;">&times;</span>
+        <span id="modal-close" style="position:absolute;top:32px;right:48px;font-size:2.5rem;color:#fff;cursor:pointer;font-weight:bold;">×</span>
         <img id="modal-img" src="" alt="Photo" style="max-width:90vw;max-height:80vh;border-radius:12px;box-shadow:0 4px 32px #b2222280;display:block;margin:auto;" />
     </div>
     <script>
-    // Accordion functionality for all sections
-    document.addEventListener('DOMContentLoaded', function() {
-        var accordionBtns = document.querySelectorAll('.accordion-btn');
-        accordionBtns.forEach(function(btn) {
-            btn.addEventListener('click', function() {
-                var content = btn.nextElementSibling;
-                content.classList.toggle('active');
+        document.addEventListener('DOMContentLoaded', function() {
+            var accordionBtns = document.querySelectorAll('.accordion-btn');
+            accordionBtns.forEach(function(btn) {
+                btn.addEventListener('click', function() {
+                    var content = btn.nextElementSibling;
+                    content.classList.toggle('active');
+                });
             });
-        });
-        // Modal functionality (not used for Photos tab anymore)
-        var modal = document.getElementById('image-modal');
-        var modalImg = document.getElementById('modal-img');
-        var modalClose = document.getElementById('modal-close');
-        document.querySelectorAll('.accordion-content .wpr-grid .wpr-tile img').forEach(function(img) {
-            img.style.cursor = 'zoom-in';
-            img.addEventListener('click', function(e) {
-                modal.style.display = 'flex';
-                modalImg.src = img.src;
-                modalImg.alt = img.alt;
+            var modal = document.getElementById('image-modal');
+            var modalImg = document.getElementById('modal-img');
+            var modalClose = document.getElementById('modal-close');
+            document.querySelectorAll('.accordion-content .wpr-grid .wpr-tile img').forEach(function(img) {
+                img.style.cursor = 'zoom-in';
+                img.addEventListener('click', function(e) {
+                    modal.style.display = 'flex';
+                    modalImg.src = img.src;
+                    modalImg.alt = img.alt;
+                });
             });
-        });
-        modalClose.addEventListener('click', function() {
-            modal.style.display = 'none';
-            modalImg.src = '';
-        });
-        modal.addEventListener('click', function(e) {
-            if (e.target === modal) {
+            modalClose.addEventListener('click', function() {
                 modal.style.display = 'none';
                 modalImg.src = '';
-            }
+            });
+            modal.addEventListener('click', function(e) {
+                if (e.target === modal) {
+                    modal.style.display = 'none';
+                    modalImg.src = '';
+                }
+            });
         });
-    });
     </script>
 </body>
 </html>
