Fix OneDrive/SharePoint link for Buckeye Photos

--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                                 <div class="wpr-tile">
                                     <img src="https://upload.wikimedia.org/wikipedia/commons/4/48/Folder_icon_yellow.svg" alt="Photos Folder" class="wpr-icon" />
                                     <div class="wpr-title">All Buckeye Photos</div>
-                                    <a href="https://onedrive.live.com/https://cogentanalytics-my.sharepoint.com/:f:/p/eculp/ErrzXH0JoKNIhO_qgKgLvdMBwOeJc1i1Aez8T67mAls5Uw?e=kx9hWR" class="wpr-link" target="_blank">View Folder</a>
+                                    <a href="https://cogentanalytics-my.sharepoint.com/:f:/p/eculp/ErrzXH0JoKNIhO_qgKgLvdMBwOeJc1i1Aez8T67mAls5Uw?e=vhmIxS" class="wpr-link" target="_blank">View Folder</a>
                                 </div>
                             </div>
                         </div>
