Refactor styles and update document links in index.html
Refactor CSS styles for better readability and consistency. Update document links to correct paths and fix typos in titles.

--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <title>Cardinal Transportation Client Portal</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
-        .accordion {
-            margin-bottom: 24px;
-        }
+        .accordion { margin-bottom: 24px; }
         .accordion-btn {
             background: #b22222;
             color: #fff;
@@ -22,9 +20,7 @@
             transition: background 0.2s;
             margin-bottom: 4px;
         }
-        .accordion-btn:hover {
-            background: #8b1a1a;
-        }
+        .accordion-btn:hover { background: #8b1a1a; }
         .accordion-content {
             max-height: 0;
             overflow: hidden;
@@ -80,9 +76,7 @@
             margin-top: 8px;
             transition: background 0.2s;
         }
-        .wpr-link:hover {
-            background: #8b1a1a;
-        }
+        .wpr-link:hover { background: #8b1a1a; }
         .accordion-content.active {
             max-height: 350px;
             padding: 16px 18px;
@@ -125,14 +119,8 @@
             font-size: 1.3rem;
             margin-bottom: 12px;
         }
-        .section {
-            margin-bottom: 36px;
-        }
-        ul.document-list {
-            list-style: none;
-            padding: 0;
-            margin: 0;
-        }
+        .section { margin-bottom: 36px; }
+        ul.document-list { list-style: none; padding: 0; margin: 0; }
         ul.document-list li {
             margin: 18px 0;
             display: flex;
@@ -155,9 +143,7 @@
             transition: background 0.2s;
             box-shadow: 0 2px 6px rgba(178,34,34,0.08);
         }
-        .download-btn:hover {
-            background: #8b1a1a;
-        }
+        .download-btn:hover { background: #8b1a1a; }
         .contact {
             background: #f2f2f2;
             padding: 18px;
@@ -172,12 +158,8 @@
             margin-bottom: 24px;
         }
         @media (max-width: 700px) {
-            .container {
-                padding: 18px 6px;
-            }
-            h1 {
-                font-size: 1.5rem;
-            }
+            .container { padding: 18px 6px; }
+            h1 { font-size: 1.5rem; }
         }
     </style>
 </head>
@@ -195,62 +177,62 @@
                         <div class="wpr-tile">
                             <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
                             <div class="wpr-title">2025-06-04 WPR</div>
-                            <a href="docs/WPR's/2025-06-04_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
+                            <a href="docs/docs/WPR%27s/2025-06-04_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
                         </div>
                         <div class="wpr-tile">
                             <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
                             <div class="wpr-title">2025-06-13 WPR</div>
-                            <a href="docs/WPR's/2025-06-13_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
+                            <a href="docs/docs/WPR%27s/2025-06-13_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
                         </div>
                         <div class="wpr-tile">
                             <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
                             <div class="wpr-title">2025-06-20 WPR</div>
-                            <a href="docs/WPR's/2025-06-20_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
+                            <a href="docs/docs/WPR%27s/2025-06-20_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
                         </div>
                         <div class="wpr-tile">
                             <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
                             <div class="wpr-title">2025-06-27 WPR</div>
-                            <a href="docs/WPR's/2025-06-27 _WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
+                            <a href="docs/docs/WPR%27s/2025-06-27_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
                         </div>
                         <div class="wpr-tile">
                             <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
                             <div class="wpr-title">2025-07-11 WPR</div>
-                            <a href="docs/WPR's/2025-07-11_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
+                            <a href="docs/docs/WPR%27s/2025-07-11_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
                         </div>
                         <div class="wpr-tile">
                             <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
                             <div class="wpr-title">2025-08-01 WPR</div>
-                            <a href="docs/WPR's/2025-08-01_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
+                            <a href="docs/docs/WPR%27s/2025-08-01_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
                         </div>
                         <div class="wpr-tile">
                             <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
                             <div class="wpr-title">2025-08-22 WPR</div>
-                            <a href="docs/WPR's/2025-08-22_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
+                            <a href="docs/docs/WPR%27s/2025-08-22_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
                         </div>
                         <div class="wpr-tile">
                             <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
                             <div class="wpr-title">2025-09-19 WPR</div>
-                            <a href="docs/WPR's/2025-09-19_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
+                            <a href="docs/docs/WPR%27s/2025-09-19_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
                         </div>
                         <div class="wpr-tile">
                             <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
                             <div class="wpr-title">2025-10-03 WPR</div>
-                            <a href="docs/WPR's/2025-10-03_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
+                            <a href="docs/docs/WPR%27s/2025-10-03_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
                         </div>
                         <div class="wpr-tile">
                             <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
                             <div class="wpr-title">2025-10-17 WPR</div>
-                            <a href="docs/WPR's/2025-10-17_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
+                            <a href="docs/docs/WPR%27s/2025-10-17_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
                         </div>
                         <div class="wpr-tile">
                             <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
                             <div class="wpr-title">2025-10-24 WPR</div>
-                            <a href="docs/WPR's/2025-10-24_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
+                            <a href="docs/docs/WPR%27s/2025-10-24_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
                         </div>
                         <div class="wpr-tile">
                             <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
                             <div class="wpr-title">2025-11-21 WPR</div>
-                            <a href="docs/WPR's/2025-11-21_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
+                            <a href="docs/docs/WPR%27s/2025-11-21_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
                         </div>
                     </div>
                 </div>
@@ -267,13 +249,13 @@
                             <div class="wpr-grid">
                                 <div class="wpr-tile">
                                     <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
-                                    <div class="wpr-title">Real Rstate Purchase Contract Cardinal Buckeye.pdf</div>
-                                    <a href="docs/docs/Buckeye/Deal Documents/Real Rstate Purchase Contract Cardinal Buckeye.pdf" class="wpr-link" target="_blank">View/Download</a>
+                                    <div class="wpr-title">Real Estate Purchase Contract Cardinal Buckeye.pdf</div>
+                                    <a href="docs/docs/Buckeye/Deal Documents/Real-Estate-Purchase-Contract-Cardinal-Buckeye.pdf" class="wpr-link" target="_blank">View/Download</a>
                                 </div>
                                 <div class="wpr-tile">
                                     <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
                                     <div class="wpr-title">Purchase Agreement Cardinal Buckeye.pdf</div>
-                                    <a href="docs/docs/Buckeye/Deal Documents/Purchase Agreement Cardinal Buckeye.pdf" class="wpr-link" target="_blank">View/Download</a>
+                                    <a href="docs/docs/Buckeye/Deal Documents/Purchase-Agreement-Cardinal-Buckeye.pdf" class="wpr-link" target="_blank">View/Download</a>
                                 </div>
                                 <div class="wpr-tile">
                                     <img src="https://upload.wikimedia.org/wikipedia/commons/3/3c/Xls_icon.png" alt="Excel" class="wpr-icon" />
@@ -288,7 +270,7 @@
                                 <div class="wpr-tile">
                                     <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
                                     <div class="wpr-title">$5million_Non-Binding Term Sheet(Elliott Created).pdf</div>
-                                    <a href="docs/docs/Buckeye/Deal Documents/$5million_Non-Binding Term Sheet(Elliott Created).pdf" class="wpr-link" target="_blank">View/Download</a>
+                                    <a href="docs/docs/Buckeye/Deal Documents/$5million_Non-Binding-Term-Sheet(Elliott-Created).pdf" class="wpr-link" target="_blank">View/Download</a>
                                 </div>
                             </div>
                         </div>
@@ -299,13 +281,13 @@
                             <div class="wpr-grid">
                                 <div class="wpr-tile">
                                     <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
-                                    <div class="wpr-title">Narrative from Meeting with Buckeye Charter Owners.pdf</div>
-                                    <a href="docs/docs/Buckeye/Insights/Narrative from Meeting with Buckeye Charter Owners.pdf" class="wpr-link" target="_blank">View/Download</a>
+                                    <div class="wpr-title">Narrative from Meeting with Buckeye.pdf</div>
+                                    <a href="docs/docs/Buckeye/Insights/Narrative-from-Meeting-with-Buckeye.pdf" class="wpr-link" target="_blank">View/Download</a>
                                 </div>
                                 <div class="wpr-tile">
                                     <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
-                                    <div class="wpr-title">Key Information from Meeting with Buckeye Charter Owners.pdf</div>
-                                    <a href="docs/docs/Buckeye/Insights/Key Information from Meeting with Buckeye Charter Owners.pdf" class="wpr-link" target="_blank">View/Download</a>
+                                    <div class="wpr-title">Key Information from Meeting.pdf</div>
+                                    <a href="docs/docs/Buckeye/Insights/Key-Information-from-Meeting.pdf" class="wpr-link" target="_blank">View/Download</a>
                                 </div>
                             </div>
                         </div>
@@ -319,8 +301,6 @@
                                     <div class="wpr-title">All Buckeye Photos</div>
                                     <a href="https://cogentanalytics-my.sharepoint.com/:f:/p/eculp/ErrzXH0JoKNIhO_qgKgLvdMBwOeJc1i1Aez8T67mAls5Uw?e=vhmIxS" class="wpr-link" target="_blank">View Folder</a>
                                 </div>
-                            </div>
-                        </div>
                             </div>
                         </div>
                     </div>
